2009-01-21  Adrian Robert  <Adrian.B.Robert@gmail.com>

	* nsmenu.m (NSMENUPROFILE): Change #if style.

	* nsterm.m: (x_set_frame_alpha): Add prototype.
	(ns_fake_keydown, EmacsView-keyUp:): New variable and function to
	handle Ctrl-tab.  (Bug#1841)
	(ns_get_color): Use unsigned long long for scanned hex string value.
	(ns_term_shutdown): Abort on non SIGTERM signals.
	(EmacsPrefsController-setDefaultFont:,-setColors:): Raise the frame.

	* nsimage.m (EmacsImage+allocInitFromFile:): Set to ignore DPI.
	(Bug#1316)

2009-01-19  Chong Yidong  <cyd@stupidchicken.com>

	* xfaces.c (Finternal_set_lisp_face_attribute, Fx_list_fonts):
	Check return value of font_spec_from_name.
	(Fx_list_fonts): Doc fix.

	* font.c (font_spec_from_name): Return Qnil if font name could not
	be parsed.
	(font_parse_name): Treat a `?' character as part of an XLFD.

	* fns.c (Fsubstring): Doc fix.

2009-01-19  Kenichi Handa  <handa@m17n.org>

	* ftfont.c (ftfont_lookup_cache): Check the return value of
	FcFontList.
	(ftfont_list): Likewise.

2009-01-18  Juanma Barranquero  <lekktu@gmail.com>

	* dbusbind.c (Fdbus_register_signal):
	* process.c (conv_sockaddr_to_lisp):
	* w32fns.c (Fw32_battery_status): Use empty_unibyte_string.

	* callproc.c (Fgetenv_internal): Doc fix.

2009-01-16  Chong Yidong  <cyd@stupidchicken.com>

	* xfns.c (x_make_gc): Don't allocate stipple member for gc_values;
	it is not even used.

2009-01-16  Glenn Morris  <rgm@gnu.org>

	* font.c (Ffont_variation_glyphs): Silence compiler.

2009-01-15  Juanma Barranquero  <lekktu@gmail.com>

	* sound.c (SOUND_WARNING): Use _snprintf, for MSVC compatibility.
	Reported by David Robinow <drobinow@gmail.com>.

2009-01-15  Kenichi Handa  <handa@m17n.org>

	* coding.c (detect_coding_system): Fix handling of
	null_byte_found.

2009-01-14  Jason Rumney  <jasonr@gnu.org>

	* frame.c (x_set_font): Always store a font to the font parameter,
	never a fontset.  (Bug#1562)

2009-01-14  Kenichi Handa  <handa@m17n.org>
