@@ -2,12 +2,16 @@
 
 	* nsmenu.m (NSMENUPROFILE): Change #if style.
 
-	* nsterm.m: (x_set_frame_alpha): Add prototype.
+	* nsterm.h (EmacsPrefsController): Add -setPanelFromDefaultValues.
+
+	* nsterm.m (x_set_frame_alpha): Add prototype.
 	(ns_fake_keydown, EmacsView-keyUp:): New variable and function to
 	handle Ctrl-tab.  (Bug#1841)
 	(ns_get_color): Use unsigned long long for scanned hex string value.
 	(ns_term_shutdown): Abort on non SIGTERM signals.
 	(EmacsPrefsController-setDefaultFont:,-setColors:): Raise the frame.
+	(EmacsPrefsController-setPanelFromDefaultValues) New function.
+	(EmacsPrefsController-resetToDefaults:): Use it. (Bug#1801)
 
 	* nsimage.m (EmacsImage+allocInitFromFile:): Set to ignore DPI.
 	(Bug#1316)
